--- a/styles/criminal.css
+++ b/styles/criminal.css
@@ -1,13 +1,19 @@
 .criminalsContainer {
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 100px;
+    margin-right: 100px;
+    justify-content: center;
+    box-shadow: 0px 0px 36px -5px rgba(0,0,0,0.64);
+    padding-top: 100px
 }
 
 .criminal__card {
-    flex-basis: 30%;
-    background-color: #939393;
+    box-shadow: 0px 0px 5px 0px #272c2f;
+    flex-basis: 40%;
     max-height: 300PX;
-    color:#f3f7f8;
+    color:#4a4f55;
     border-radius: 4px;
     margin-right: 10px;
     margin-bottom: 10px;
@@ -15,7 +21,8 @@
 
 .criminal__header {
     font-weight: 550;
-    background-color: #5a7c8e;
+    background-color: #294625;
+    
     color: #f3f7f8;
     text-align: center;
   padding-top: 10px;
@@ -26,4 +33,6 @@
 
 .criminal__info  {
     line-height: 1.5;
+    padding: 1em;
+    text-transform: capitalize;
 }
