--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,20 @@
 @import 'criminal.css';
 @import 'officer.css';
+@import 'selector.css';
 
 body {
-    background-color: #333333;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f3f3f3;
+    font-family: Avenir-Book;
+}
+
+.page__header {
+    display: flex;
+    justify-content: space-around;
+    background-color: #294625;
+    color: white;
+    margin-top: -20px;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-top: 20px;
+    align-items: baseline;
 }
