--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@ body {
 
 .page__header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: #294625;
     color: white;
     margin-top: -20px;
@@ -17,4 +17,19 @@ body {
     margin-right: -20px;
     padding-top: 20px;
     align-items: baseline;
+    box-shadow: 0px 0px 20px 2px black;
+
+}
+
+.content__header {
+    display: block;
+    width: 100%;
+    height: 100px;
+    margin-bottom: 20px;
+    padding: 5px;
+}
+
+span {
+    font-weight: 100;
+    color: #81bc00;
 }
