--- a/styles/officer.css
+++ b/styles/officer.css
@@ -1,11 +1,37 @@
 .officersContainer {
+    margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
+    background-color: white;
+    margin-left: 100px;
+    margin-right: 100px;
+    justify-content: center;
+    box-shadow: 0px 0px 36px -5px rgba(0, 0, 0, 0.64);
 }
 
 .officer__card {
-    flex-basis: 20%;
-    border: .5px solid blue;
-    margin: 1em;
-    padding: 1em;
+        box-shadow: 0px 0px 5px 0px #272c2f;
+        flex-basis: 50%;
+        max-height: 300PX;
+        color: #4a4f55;
+        border-radius: 4px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: space-between;
+      
+    }
+.officer {
+    background-color: #294625;
+    font-size: 20pt;
+    text-align: center;
+    height: 100%;
+    width: 300px;
+    color: #f3f7f8;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.officer__icon {
+    padding: 20px;
+    width: 20%;
 }
