--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ body {
     margin-right: -20px;
     padding-top: 20px;
     align-items: baseline;
-    box-shadow: 0px 0px 20px 2px black;
+    box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.64);
 
 }
 
