--- a/styles/criminal.css
+++ b/styles/criminal.css
@@ -3,8 +3,8 @@
     display: flex;
     flex-wrap: wrap;
     min-height: 500px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 80px;
+    margin-right: 80px;
     justify-content: center;
     box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.64);
 }
@@ -23,6 +23,11 @@
     border-radius: 4px;
     margin-right: 10px;
     margin-bottom: 10px;
+    min-width: 300px;
+}
+
+.criminal__card:hover {
+    box-shadow: 0px 0px 5px 0px #81bc00;
 }
 
 .criminal__header {
