created a local api to host user submited notes. created the note form and styled it to match page. notes do not save yet

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 @import 'criminal.css';
 @import 'officer.css';
 @import 'selector.css';
+@import 'note.css';
+
 
 body {
     background-color: #f3f3f3;
