--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@ body {
 
 .page__header {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     background-color: #294625;
     color: white;
     margin-top: -20px;
