--- a/styles/criminal.css
+++ b/styles/criminal.css
@@ -2,7 +2,8 @@
     background-color: white;
     display: flex;
     flex-wrap: wrap;
-    min-height: 500px;
+    /* min-height: 500px; */
+    margin-top: 80px;
     margin-left: 80px;
     margin-right: 80px;
     justify-content: center;
@@ -13,6 +14,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 40px;
+    width: 100%;
 }
 
 .criminal__card {
@@ -48,12 +51,16 @@
 }
 
 .content__title {
-    text-transform: capitalize;
-    color: #4a4f55;
+    /* text-transform: capitalize; */
+    color: white;
     flex-basis: 100%;
     text-align: center;
-    font-size: 50pt;
+    font-size: 25pt;
     line-height: 1.5;
+    background-color: #294625;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+   margin-bottom: 40px;
 }
 .criminal__icon {
     width: 20%;
