--- a/styles/criminal.css
+++ b/styles/criminal.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     /* min-height: 500px; */
-    margin-top: 80px;
+    /* margin-top: 80px; */
     margin-left: 80px;
     margin-right: 80px;
     justify-content: center;
