restyled the page to have the items side by side code is cleaned up and for the most part commented out

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,3 +43,10 @@ span {
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
+.content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
