--- a/styles/criminal.css
+++ b/styles/criminal.css
@@ -1,11 +1,13 @@
 .criminalsContainer {
     background-color: white;
     display: flex;
+    flex-basis: 50%;
     flex-wrap: wrap;
+    /* margin-left: -100px; */
     /* min-height: 500px; */
     /* margin-top: 80px; */
-    margin-left: 80px;
-    margin-right: 80px;
+    /* margin-left: 80px;
+    margin-right: 80px; */
     justify-content: center;
     box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.64);
 }
