--- a/styles/note.css
+++ b/styles/note.css
@@ -1,3 +1,4 @@
+
 .notesContainer {
     font-family: Avenir-Book;
     background-color: white;
@@ -6,15 +7,18 @@
     flex-direction: column;
     flex-wrap: wrap;
     min-height: 100px;
-    max-height: 500px;
+    max-height: 358px;
     margin-left: 20px;
-    /* margin-top: 80px; */
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin-top: 37px;
     /* margin-right: 80px; */
     /* margin: 80px; */
     padding: 40px;
     justify-content: center;
     box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.64);
 }
+
 
 fieldset{
     display: flex;
@@ -65,7 +69,7 @@ fieldset {
     background-color: #294625;
     color: #f3f7f8;
     text-align: center;
-    margin-top: -102px;
+    margin-top: -108px;
     margin-left: -40px;
     margin-right: -40px;
     padding-top: 10px;
@@ -87,7 +91,7 @@ fieldset {
 
 .note__content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
